re PR target/36800 (va_arg for _Decimal128 on 32-bit Power mishandled in certain cases)

PR target/36800

	PR target/36800
	* config/rs6000/rs6000.c (rs6000_gimplify_va_arg): Do not set
	regalign for the reg == fpr and TDmode case.

testsuite/
	* gcc.dg/dfp/pr36800.c: New.

Co-Authored-By: Joseph Myers <joseph@codesourcery.com>

From-SVN: r145859